RESOLVED FIXED77409
Web Inspector: DOMDebugger.setEventListenerBreakpoint should accept regular DOM event names.
https://bugs.webkit.org/show_bug.cgi?id=77409
Summary Web Inspector: DOMDebugger.setEventListenerBreakpoint should accept regular D...
Pavel Feldman
Reported 2012-01-31 00:37:25 PST
Currently it operates "listener:<eventname>" strings.
Attachments
Patch (19.67 KB, patch)
2012-01-31 00:54 PST, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2012-01-31 00:54:53 PST
WebKit Review Bot
Comment 2 2012-01-31 00:58:04 PST
Attachment 124678 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource From git://git.webkit.org/WebKit + f6387b5...c57450d master -> origin/master (forced update) Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 106342 = f6387b580da90ff9c3210bc103deac351cbebee2 r106341 = 7099bf5ec21421b321397d0043f4c212a20f4bb6 r106342 = 918a007575443f00152cc423a9412f083275860b r106343 = c57450da079d27d2b4fd1ee5daecdf7a12dce827 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Yury Semikhatsky
Comment 3 2012-01-31 01:43:19 PST
Comment on attachment 124678 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=124678&action=review > Source/WebCore/inspector/Inspector.json:2283 > + "name": "setInstrumentationBreakpoint", setInstrumentationBreakpoint is a bit confusing, probably setTimerBreakpoint as we don't support other types of such breakpoints? > Source/WebCore/inspector/InspectorDOMDebuggerAgent.cpp:153 > + removeBreakpoint(error, String(listenerEventCategoryType) + eventName); Why not aggregate breakpoints by categories in the storage? > Source/WebCore/inspector/front-end/BreakpointsSidebarPane.js:569 > + if (eventName.indexOf(WebInspector.EventListenerBreakpointsSidebarPane.categotyListener) === 0) You can pass category and event type as two separate parameters then you wouldn't need to first combine and then split them.
Yury Semikhatsky
Comment 4 2012-01-31 01:43:45 PST
Comment on attachment 124678 [details] Patch Please address comments before landing.
Pavel Feldman
Comment 5 2012-01-31 01:58:54 PST
> setInstrumentationBreakpoint is a bit confusing, probably setTimerBreakpoint as we don't support other types of such breakpoints? > We have a number of pending requests for additional instrumentation. > > Source/WebCore/inspector/InspectorDOMDebuggerAgent.cpp:153 > > + removeBreakpoint(error, String(listenerEventCategoryType) + eventName); > > Why not aggregate breakpoints by categories in the storage? Because we would loose all the stored breakpoints. > > Source/WebCore/inspector/front-end/BreakpointsSidebarPane.js:569 > > + if (eventName.indexOf(WebInspector.EventListenerBreakpointsSidebarPane.categotyListener) === 0) > > You can pass category and event type as two separate parameters then you wouldn't need to first combine and then split them. That only solves one call site problem.
Pavel Feldman
Comment 6 2012-01-31 02:05:57 PST
Note You need to log in before you can comment on or make changes to this bug.